--- a/src/styles/scss/Projects.scss
+++ b/src/styles/scss/Projects.scss
@@ -34,7 +34,8 @@
 
 .box {
    margin: 5em auto; 
-   height: 30em;
+   padding: 1em;
+   height: auto;
    background-color: $grey;
    width: 75%;
    color: $blue;
@@ -43,6 +44,11 @@
 
 .project-description {
     margin-top: 2em;
+
+    li {
+        
+        line-height: 1.5;
+    }
 }
 
 .buttons {
@@ -100,11 +106,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     
     img {
-        height: 10em;
-        width: 18em;
-        margin-right: 3em;
+        height: 7em;
+        width: 12em;
         margin-top: 3em;
     }
 }
@@ -141,6 +147,17 @@
 
     .images_container {
         flex-direction: row;
+
+        img {
+            margin-right: 2em;
+        }
     }
 
 }
+
+// img {
+//     height: 10em;
+//     width: 18em;
+//     margin-right: 3em;
+//     margin-top: 3em;
+// }
